# eb-metrics

./: .gitignore  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pypi-smoke.yml  release.yml
docs/: index.md
docs/api/: frameworks.md  metrics.md
src/eb_metrics/: __init__.py  _utils.py
src/eb_metrics/frameworks/: __init__.py  keras_loss.py  sklearn_scorer.py
src/eb_metrics/metrics/: __init__.py  cost_ratio.py  loss.py  regression.py  service.py
src/ebmetrics/: __init__.py  _utils.py
src/ebmetrics/frameworks/: __init__.py  keras_loss.py  sklearn_scorer.py
src/ebmetrics/metrics/: __init__.py  cost_ratio.py  loss.py  regression.py  service.py
tests/frameworks/: test_keras_loss.py  test_sklearn_scorer.py
tests/metrics/: test_cost_ratio.py  test_loss.py  test_regression.py  test_service.py
