[project]
name = "ebmetrics"
version = "0.1.0"
description = "Core Electric Barometer error metrics, including asymmetric CWSL and standard forecast loss functions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }

authors = [
  { name = "Kyle Corrie (Economistician)", email = "kcorrie@economistician.com" }
]

# Keep this minimal — ebmetrics should be pure mathematical metrics.
dependencies = [
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/Economistician/eb-metrics"
Repository = "https://github.com/Economistician/eb-metrics"
Issues = "https://github.com/Economistician/eb-metrics/issues"
Documentation = "https://github.com/Economistician/eb-docs"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# Tell setuptools to use the src/ layout
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"