######################################
# Project metadata
######################################
[project]
name = "eb-metrics"
version = "0.2.8"
description = "Core Electric Barometer error metrics, including asymmetric CWSL and standard forecast loss functions."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"

authors = [
  { name = "Kyle Corrie (Economistician)", email = "kcorrie@economistician.com" }
]

keywords = ["forecasting", "metrics", "evaluation", "time-series", "operations-research"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

######################################
# Core runtime dependencies
######################################
dependencies = [
  "numpy>=1.24",
]

######################################
# Project URLs
######################################
[project.urls]
Homepage = "https://github.com/Economistician/eb-metrics"
Repository = "https://github.com/Economistician/eb-metrics"
Issues = "https://github.com/Economistician/eb-metrics/issues"
Documentation = "https://github.com/Economistician/eb-docs"

######################################
# Optional dependencies (extras)
######################################
[project.optional-dependencies]

# CI / test-only dependencies
test = [
  "pytest>=8.0",
  "scikit-learn>=1.3",
]

# Local developer tooling
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.0.1",
  "pyright>=1.1",
  "twine>=4.0",
]

# Framework integrations
sklearn = [
  "scikit-learn>=1.3",
]

tf = [
  "tensorflow>=2.13",
]

# Combined extra to satisfy the "extras: all" CI contract.
# This ensures that when CI calls for "all", it gets frameworks + test tools.
#
# NOTE:
# Avoid self-referential extras like "eb-metrics[sklearn,tf,dev]" inside optional-dependencies.
# Instead, define "all" as the explicit union of the desired requirements.
all = [
  # Framework integrations
  "scikit-learn>=1.3",
  "tensorflow>=2.13",

  # CI / test-only dependencies
  "pytest>=8.0",

  # Local developer tooling
  "pytest-cov>=5.0",
  "ruff>=0.0.1",
  "pyright>=1.1",
  "twine>=4.0",
]

######################################
# Build system
######################################
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

######################################
# Package discovery
######################################
[tool.setuptools.packages.find]
where = ["src"]

######################################
# Pytest configuration
######################################
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
